--- a/vine-core/Cargo.toml
+++ b/vine-core/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 parquet = "53.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4"
 
+[lib]
+name = "vine_core"
+crate-type = ["cdylib"]
