--- a/vine-core/Cargo.toml
+++ b/vine-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vine-core"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
@@ -8,6 +8,7 @@ parquet = "53.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+jni = "0.21.1"
 
 [lib]
 name = "vine_core"
